Upgrade inventory GUIs and chat style presets